Eslint config update

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
     "parser": "vue-eslint-parser",
+    "parserOptions": {
+        "parser": "babel-eslint",
+        "ecmaVersion": 2017,
+        "sourceType": "module"
+    },
     "env": {
         "browser": true
     },
