--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "query-string": "^6.13.1",
     "semantic-ui-css": "^2.4.1",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
