--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^6.13.1",
     "semantic-ui-css": "^2.4.1",
     "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
